--- a/server/package.json
+++ b/server/package.json
@@ -23,16 +23,22 @@
     "@types/express": "^4.17.14",
     "@types/hpp": "^0.2.2",
     "@types/node": "^18.11.10",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
+    "express-session": "^1.17.3",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
-    "mongoose": "^6.7.5"
+    "mongoose": "^6.7.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/express-session": "^1.17.5",
+    "@types/uuid": "^9.0.0",
     "typescript": "^4.9.3"
   }
 }
