--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "build": "npx tsc",
-    "start": "concurrently \"npx tsc --watch\" \"nodemon dist/server.js\""
+    "build": "concurrently \"npx tsc\" \"node tools/copyAssets.js\"",
+    "build:prod": "concurrently \"cross-env NODE_ENV=production\" \"npm run build\"",
+    "start": "concurrently \"npx tsc --watch\" \"nodemon --watch src -e ts,js,css,pug tools/copyAssets.js\" \"nodemon dist/server.js\""
   },
   "repository": {
     "type": "git",
@@ -18,27 +19,30 @@
   },
   "homepage": "https://github.com/nidhalmessaoudi/CourtsAndLawyers#readme",
   "dependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.14",
-    "@types/hpp": "^0.2.2",
-    "@types/node": "^18.11.10",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "mongoose": "^6.7.5",
+    "pug": "^3.0.2",
+    "shelljs": "^0.8.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
+    "@types/hpp": "^0.2.2",
+    "@types/node": "^18.11.10",
     "@types/uuid": "^9.0.0",
+    "cross-env": "^7.0.3",
     "typescript": "^4.9.3"
   }
 }
